module3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
